--- a/src/content/docs/reference/Directives/flags.mdx
+++ b/src/content/docs/reference/Directives/flags.mdx
@@ -3,8 +3,13 @@ title: Feature Flags
 description: Feature Flags
 sidebar:
   label: Feature Flags
-  order: 1
+  order: 4
+  badge:
+    text: Iris Only
+    variant: tip
 ---
+
+#### Location: shaders.properties
 
 Feature flags are an Iris system to query the activation state of certain features. To activate them there are two directives that can be placed in `shader.properties`: `iris.features.required` and `iris.features.optional`. `iris.features.required` will throw an error if your device or version of Iris does not support the feature. `iris.features.optional` will create a define that can be used to test the availability of such a feature. Additionally the `IS_IRIS` define can be used to test if your shader is in Iris or optifine, and always exists.
 <br/>
