--- a/src/content/docs/reference/Shaders.Properties/indirect_pass.mdx
+++ b/src/content/docs/reference/Shaders.Properties/indirect_pass.mdx
@@ -16,7 +16,7 @@ sidebar:
 Allows you to dispatch a compute shader with the work group amount specified from a [SSBO](/reference/buffers/ssbo).
 
 To use this, replace:
-- `<pass>` with the name of the compute shader pass (e.g. `compsoite`, `deferred1`, `prepare8`)
+- `<pass>` with the name of the compute shader pass (e.g. `composite`, `deferred1`, `prepare8`)
 - `<bufferObjectNumber>` with the "index" of the SSBO
 - `<offsetInBuffer>` with the offset to the work group count in bytes
 
